--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,19 +1,2 @@
-$web-font-path: "../assets/fonts" !default;
-
-@font-face {
-  font-family: "ProximaNova-Thin";
-  src: url('#{$web-font-path}/ProximaNova-Thin.woff2') format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "ProximaNova-Regular";
-  src: url('#{$web-font-path}/ProximaNova-Regular.woff2') format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "ProximaNova-Bold";
-  src: url('#{$web-font-path}/ProximaNova-Bold.woff2') format("woff2");
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@300;400;700;900&display=swap');
