--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -3,8 +3,8 @@
     Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
     - The "symbol *" part is to solve Firefox SVG sprite bug
 */
-@import url("https://fonts.googleapis.com/css2?family=Moon+Dance&family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@300;400;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Moon+Dance&family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@300;400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -46,54 +46,50 @@ img {
     Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
     - The "symbol *" part is to solve Firefox SVG sprite bug
  */
-*:where(:not(html, iframe, canvas, img, svg, video, audio, button):not(svg *, symbol *)) {
-  all: unset;
-  display: revert;
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  color: #fff;
-  font: 400 16px/1.2 "Open Sans", arial;
+  color: #D4CAF3;
+  font: 400 16px/1.6 "Inter", arial;
   background: #14014B;
 }
 
 h1 {
-  font: 700 70px/1 "Open Sans", arial;
+  font: 700 70px/1 "Epilogue", arial;
   letter-spacing: -0.06em;
   color: #E108BE;
-  margin-bottom: 8px;
+  margin-bottom: 12px;
 }
 
 h2 {
-  font: 900 60px/1.4 "Open Sans", arial;
+  font: 900 60px/1.4 "Epilogue", arial;
   background: linear-gradient(270deg, #EE2DFF 0%, #BFAFFF 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-  margin: 0;
+  margin: 20px;
 }
 
 h3 {
-  font: 700 40px/1.2 "Open Sans", arial;
+  font: 600 28px/1.2 "Inter", arial;
   color: #fff;
-  margin-bottom: 40px;
 }
 
 h4 {
-  font: 700 32px/1.2 "Open Sans", arial;
+  font: 700 22px/1.2 "Epilogue", arial;
   color: #fff;
-  margin-bottom: 0;
 }
 
 h5 {
-  font: 600 30px/1.2 "Open Sans", arial;
+  font: 600 18px/1.2 "Epilogue", arial;
   color: #fff;
-  margin-bottom: 12px;
 }
 
 h6 {
-  font: 700 24px/1.2 "Open Sans", arial;
+  font: 600 16px/1.2 "Inter", arial;
   color: #fff;
   margin-bottom: 20px;
 }
@@ -142,21 +138,49 @@ a {
   font-weight: 700;
 }
 
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .btn {
   display: inline-flex;
   padding: 20px 40px;
   background: linear-gradient(270deg, #B900C9 0%, #5C2FDC 100%);
   border-radius: 6px;
+  border: none;
+  transition: all 0.5s ease;
+}
+.btn:hover {
+  background: linear-gradient(270deg, #B900C9 0%, #B900C9 100%);
+  box-shadow: 0px 0px 50px rgba(243, 103, 255, 0.3);
 }
 .btn_small {
   padding: 10px 19px;
 }
 
+.form-control {
+  margin-top: 30px;
+}
 .form-input {
   background: transparent;
   box-shadow: none;
   border-bottom: 1px solid #986AC5;
   padding-bottom: 10px;
+  outline: 0;
+}
+.form-input-fill {
+  background: rgba(255, 255, 255, 0.2);
+  border: none;
+  border-radius: 3px;
+  padding: 14px 15px;
+  font-size: 14px;
+  width: 100%;
+  color: rgba(255, 255, 255, 0.7);
+  outline: 0;
 }
 
 .header {
@@ -180,7 +204,10 @@ a {
   flex-wrap: wrap;
   gap: 25px;
 }
-.header_nav-link:hover {
+.header_nav-link {
+  font-size: 16px;
+}
+.header_nav-link:hover, .header_nav-link .active-link {
   color: #B900C9;
 }
 .header_logo {
@@ -194,9 +221,11 @@ a {
   padding-inline: 40px;
   padding-bottom: 16px;
   margin-right: -60px;
+  font-weight: 600;
+  font-size: 16px;
 }
 .header_btn:hover {
-  background: #BA2E93;
+  background: linear-gradient(90deg, #5E2EDB 0%, #B900C9 100%);
 }
 
 .ityped {
@@ -204,7 +233,7 @@ a {
 }
 
 .banner {
-  padding-block: 30px;
+  padding-top: 50px;
   background: radial-gradient(50% 50% at 50% 50%, rgba(171, 47, 173, 0.42) 0%, #14014A 100%);
   mix-blend-mode: normal;
 }
@@ -219,15 +248,15 @@ a {
 }
 .banner_content-btn {
   margin-top: 40px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .solution {
-  padding-block: 50px;
+  padding-top: 140px;
 }
 .solution_top {
-  display: grid;
-  grid-template-columns: 1fr 30%;
-  gap: 50px;
+  margin-bottom: 60px;
 }
 .solution_bottom {
   gap: 50px 140px;
@@ -237,6 +266,18 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 6px;
   padding: 35px 50px;
+}
+.solution_card-list {
+  padding-left: 20px;
+}
+.solution_card-item {
+  list-style-type: disc;
+  padding-left: 10px;
+  padding-bottom: 3px;
+}
+.solution_card h3 {
+  color: #EA39FF;
+  margin-bottom: 15px;
 }
 .solution_card-icon {
   display: inline-block;
@@ -265,13 +306,16 @@ a {
 }
 
 .plateform {
-  padding-block: 50px;
+  padding-top: 120px;
 }
 .plateform h5 {
   margin-bottom: 0;
 }
 .plateform_text {
-  margin-bottom: 80px;
+  margin-bottom: 130px;
+}
+.plateform_card {
+  align-items: flex-start;
 }
 .plateform_card-text {
   order: -1;
@@ -288,39 +332,23 @@ a {
   content: "✓";
 }
 
-.process {
-  padding-block: 50px;
-}
-.process_card-list {
-  display: flex;
-  flex-direction: column;
-  gap: 70px;
-}
-.process_card-item {
-  display: flex;
-  gap: 30px;
-}
-.process_card-item h4 {
-  margin-bottom: 8px;
-}
-.process_card-count {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 78px;
-  height: 78px;
-  border-radius: 50%;
-  border: 3px solid #BA2E93;
-  font-size: 32px;
-  font-weight: 600;
-}
-
 .architectural {
-  padding: 80px 0 100px;
-  background: linear-gradient(270deg, #EE2DFF 0%, #BFAFFF 100%);
+  padding-top: 140px;
+}
+.architectural .container {
+  background: linear-gradient(360deg, #B900C9 0%, #5C2FDC 100%);
+  padding: 70px 60px;
+  border-radius: 10px;
+}
+.architectural-title {
+  margin-bottom: 75px;
 }
 .architectural_bottom {
   gap: 40px;
+  align-items: flex-start;
+}
+.architectural_bottom h3 {
+  margin-bottom: 20px;
 }
 .architectural-title {
   text-align: center;
@@ -329,16 +357,18 @@ a {
   border-right: 1px solid rgba(255, 255, 255, 0.2);
   padding-right: 40px;
 }
-.architectural h5 {
-  color: #1C065A;
-  margin-bottom: 20px;
-}
-.architectural p {
-  color: #1C065A;
+.architectural_card-caption {
+  margin-top: 32px;
 }
 
 .trusted {
   padding-bottom: 55px;
+  grid-template-columns: 1fr 45%;
+  padding-top: 120px;
+  gap: 100px;
+}
+.trusted img {
+  justify-self: flex-end;
 }
 .trusted-caption {
   order: -1;
@@ -351,34 +381,102 @@ a {
 }
 
 .advertisement {
-  padding: 100px 0 70px;
-  background: linear-gradient(270deg, #EE2DFF 0%, #BFAFFF 100%);
+  padding-bottom: 100px;
+}
+.advertisement-icon {
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .advertisement_caption {
   text-align: center;
-  max-width: 1160px;
+  max-width: 927px;
   width: 100%;
   margin-inline: auto;
 }
-.advertisement_caption h4 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-.advertisement_caption h4, .advertisement_caption h5 {
-  color: #1C065A;
+.advertisement_caption h3 {
   font-weight: 400;
 }
 
-.footer {
-  padding: 100px 0 120px;
-  background: linear-gradient(175.23deg, #14014B 74.06%, #B900C9 143.26%);
+.company {
+  padding-top: 140px;
+}
+.company_text {
+  padding-bottom: 110px;
+}
+.company_text-subtitle {
+  font-weight: 400;
+}
+.company_epm {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 80px;
+}
+.company_epm h5 {
+  margin-top: 24px;
+}
+.company_epm ul {
+  justify-content: center;
+}
+.company_card {
+  text-align: center;
+}
+.company_card p {
+  margin: 8px 0 22px;
+}
+
+.investor {
+  margin-top: 130px;
+}
+.investor .container {
+  background: linear-gradient(360deg, #B900C9 0%, #5C2FDC 100%);
+  padding: 90px 70px;
+  border-radius: 10px;
+}
+.investor-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.investor_bottom {
+  grid-template-columns: repeat(4, 1fr);
+  gap: 32px;
+}
+
+.mission {
+  padding-top: 100px;
+}
+.mission h3 {
+  font-weight: 400;
+}
+
+.footer-bg {
+  position: relative;
+  padding: 120px 0 90px;
+  margin-top: 200px;
+  background: url("../../../src/assets/images/footer-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.footer a {
+  text-transform: capitalize;
 }
 .footer_top {
   padding-bottom: 80px;
   grid-template-columns: 1fr 40%;
+  align-items: flex-start;
+}
+.footer_top-links {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
 }
 .footer_top-form h6 {
   margin-bottom: 8px;
+}
+.footer_top .form-input {
+  min-width: 305;
 }
 .footer_top .form-control {
   margin-top: 30px;
@@ -391,4 +489,57 @@ a {
 }
 .footer_bottom-last {
   gap: 60px;
+}
+
+.modal {
+  background: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  display: none;
+  place-items: center;
+  height: 100vh;
+  width: 100%;
+}
+.modal-header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 30px 40px;
+}
+.modal .close {
+  display: inline-block;
+  cursor: pointer;
+  margin-left: auto;
+}
+.modal h2 {
+  -webkit-text-fill-color: #fff;
+}
+.modal-body {
+  max-height: calc(100vh - 250px);
+  overflow: auto;
+  padding-inline: 40px;
+}
+.modal-content {
+  max-width: 775px;
+  width: 100%;
+  background: linear-gradient(360deg, #B900C9 0%, #5C2FDC 100%);
+  color: #160054;
+  border-radius: 10px;
+  padding-bottom: 30px;
+}
+.modal-content p:not(:last-child) {
+  margin-bottom: 20px;
+}
+.modal h5 {
+  color: #160054;
+  margin-bottom: 3px;
+}
+
+.modal-open {
+  overflow: hidden;
+}
+.modal-open .modal {
+  display: grid;
 }/*# sourceMappingURL=main.css.map */
