--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,4 @@
 @import "./components/solutionSection";
 @import "./components/plateformSection";
 @import "./components/footer";
+@import "./components/modal";
