--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@300;400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700;900&display=swap');
