--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -39,7 +39,7 @@ img {
     Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
     - The "symbol *" part is to solve Firefox SVG sprite bug
  */
- *:where(:not(html, iframe, canvas, img, svg, video, audio, button):not(svg *, symbol *)) {
-  all: unset;
-  display: revert;
-}
+//  *:where(:not(html, iframe, canvas, img, svg, video, audio, button):not(svg *, symbol *)) {
+//   all: unset;
+//   display: revert;
+// }
