--- a/src/scss/components/_bannerSection.scss
+++ b/src/scss/components/_bannerSection.scss
@@ -1,5 +1,5 @@
 .banner{
-  padding-block: 30px;
+  padding-top: 50px;
   background: radial-gradient(50% 50% at 50% 50%, rgba(171, 47, 173, 0.42) 0%, #14014A 100%);
   mix-blend-mode: normal;
   &_content{
@@ -12,6 +12,8 @@
     }
     &-btn{
       margin-top: 40px;
+      font-size: 18px;
+      font-weight: 600;
     }
   }
 }
