--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,6 +3,12 @@
   padding: 20px 40px;
   background: $purple-btn-lg;
   border-radius: 6px;
+  border: none;
+  transition: all .5s ease;
+  &:hover{
+    background: linear-gradient(270deg, #B900C9 0%, #B900C9 100%);
+    box-shadow: 0px 0px 50px rgba(243, 103, 255, 0.3);
+  }
   &_small{
     padding: 10px 19px;
   }
