add company images and font changes

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,12 +1,17 @@
 $white: #fff;
 $blue: #160054;
+$blue-light:#14014B;
 $purple-light: #EA39FF;
 $purple: #BA2E93;
 $purple-regular: #E108BE;
 $purple-dark:#B900C9;
 $purple-text-lg:linear-gradient(270deg, #EE2DFF 0%, #BFAFFF 100%);
 $purple-btn-lg: linear-gradient(270deg, #B900C9 0%, #5C2FDC 100%);
-$purple-card-lg: linear-gradient(270deg, #B900C9 0%, #5C2FDC 60%);
+$purple-btn-lg-hover: linear-gradient(270deg, #B900C9 0%, #B900C9 100%);
+$purple-card-lg: linear-gradient(360deg, #72057B -40.23%, #1F0171 79.55%);
+$header-btn-gt:linear-gradient(90deg, #5E2EDB 0%, #B900C9 100%);
+$footer-gt:linear-gradient(90deg, rgba(150, 37, 152, .4) 0%, rgba(20, 1, 74, .4) 100%);
 $border: rgba(255,255,255,.2);
 $input-border:#986AC5;
 $shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+$shadow-btn: 0px 0px 50px rgba(243, 103, 255, 0.3);
