--- a/src/scss/components/_plateformSection.scss
+++ b/src/scss/components/_plateformSection.scss
@@ -1,10 +1,10 @@
 .plateform{
-  padding-top: 120px;
+  padding-top: 150px;
   h5{
     margin-bottom: 0;
   }
   &_text{
-    margin-bottom: 130px;
+    margin-bottom: 85px;
   }
   &_card{
     align-items: flex-start;
@@ -20,7 +20,7 @@
     &-item {
       padding-left: 28px;
       &::marker{
-        content: '\2713';
+        content: url('../../../src/assets/images/checked.png');
       }
     }
   }
@@ -61,7 +61,8 @@
     border-radius: 10px;
   }
   &-title{
-    margin-bottom: 75px;
+    margin-bottom: 67px;
+    font-weight: 700;
   }
   &_bottom{
     gap: 40px;
@@ -84,12 +85,30 @@
   }
 }
 .trusted{
-  padding-bottom: 55px;
-  grid-template-columns: 1fr 45%;
-  padding-top: 120px;
-  gap: 100px;
+  padding-top: 200px;
+  &-inner{
+    padding-bottom: 55px;
+  }
+  &_text-subtitle{
+    margin-bottom: 60px;
+  }
   img{
     justify-self: flex-end;
+  }
+  &_card{
+    &-dis{
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      transition: all .5s ease;
+    }
+    // &:hover{
+    //   .trusted_card-dis{
+    //     overflow: visible;
+    //     -webkit-line-clamp: initial;
+    //   }
+    // }
   }
   &-caption{
     order: -1;
@@ -102,7 +121,7 @@
   }
 }
 .advertisement{
-  padding-bottom: 100px;
+  padding-bottom: 120px;
   &-icon{
     position: absolute;
     top: -60px;
@@ -123,17 +142,23 @@
   }
 }
 .company{ 
-  padding-top: 140px;
+  text-align: center;
+  padding-top: 120px;
+  &-title{
+    margin-bottom: 60px;
+  }
+  &-section{
+    padding-top: 120px;
+  }
   &_text{
-    padding-bottom: 110px;
     &-subtitle{
       font-weight: 400;
     }
   }
   &_epm{
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
+    display: flex;
     gap: 80px;
+    justify-content: center;
     h5{
       margin-top: 24px;
     }
@@ -143,7 +168,12 @@
   }
   &_card{
     text-align: center;
+    flex: 0 1 19%;
+    img{
+      border-radius: 50%;
+    }
     p{
+      font-weight: 400;
       margin: 8px 0 22px;
     }
   }
@@ -154,6 +184,13 @@
     background: linear-gradient(360deg, #B900C9 0%, #5C2FDC 100%);
     padding: 90px 70px;
     border-radius: 10px;
+  }
+  img{
+    transition: all .5s ease;
+    transform: translateY(0);
+    &:hover{
+      transform: translateY(-10px);
+    }
   }
   &-title{
     text-align: center;
@@ -167,6 +204,36 @@
 .mission{
   padding-top: 100px;
   h3{
-    font-weight: 400;
+    font-family: 'Epilogue', arial;
+  }
+  &-title{
+    position: relative;
+    padding-top: 140px;
+    display: flex;
+    justify-content: center;
+    font-style: italic;
+  }
+  &-name{
+    padding-top: 20px;
+    color: $purple-light;
+  }
+  &-blockquote{
+    font-size: 300px;
+    display: block;
+    position: absolute;
+    top: 0;
+    font-family: 'Epilogue', arial;
+  }
+}
+.testimonial{
+  padding: 200px 0 220px;
+  background: url('../../../src/assets/images/ai-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  h3{
+    display: block;
+    max-width: 900px;
+    text-align: left;
   }
 }
