--- a/src/scss/components/_reuseable.scss
+++ b/src/scss/components/_reuseable.scss
@@ -23,6 +23,10 @@
   color: $purple-light;
   font-weight: 700;
 }
+.text-white{
+  color: $white;
+  font-weight: 700;
+}
 .text-right{
   text-align: right;
 }
