--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -78,6 +78,11 @@
   }
 }
 
+@function toRem($value) {
+  $remValue: ($value / 22) + rem; 
+  @return $remValue;
+}
+
 $laptop-screen-width: 1280px;
 $ipad-pro-width: 1024px;
 $phone-width: 767px;
