--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -5,6 +5,9 @@
   border-radius: 6px;
   border: none;
   transition: all .5s ease;
+  text-transform: uppercase;
+  color: $white;
+  cursor: pointer;
   &:hover{
     background: $purple-btn-lg-hover;
     box-shadow: $shadow-btn;
