--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,7 +11,7 @@
       @include flex(flex, wrap, null, center, 45px);
     }
     &-link{
-      @include font_size_color(18px, 700);
+      @include font_size_color(0.81rem, 700);
       &:hover,.active-link{
         color: $purple-dark;
       }
@@ -26,7 +26,7 @@
     align-items: center;
     padding-inline: 40px;
     margin-right: -60px;
-    @include font_size_color(18px, 700);
+    @include font_size_color(0.81rem, 700);
     @include flex(flex, wrap, null, center);
     &:hover{
       background: $header-btn-gt;
