--- a/src/scss/components/_plateformSection.scss
+++ b/src/scss/components/_plateformSection.scss
@@ -96,19 +96,36 @@
     justify-self: flex-end;
   }
   &_card{
+    height: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px 50px;
+    overflow: hidden;
+    &:hover{
+      transition: all .5s linear;
+      .trusted_card-text{
+        // transform: translateY(-10px);
+        max-height: 400px;
+        transition: all .5s ease-in-out;
+      }
+      .trusted_card-dis{
+        overflow: visible;
+        -webkit-line-clamp: initial;
+      }
+    }
+    &-text{
+      // transform: translateY(0);
+      transition: all .5s ease-in-out;
+      max-height: 130px;
+    }
     &-dis{
       display: -webkit-box;
-      -webkit-line-clamp: 3;
+      -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
       transition: all .5s ease;
     }
-    // &:hover{
-    //   .trusted_card-dis{
-    //     overflow: visible;
-    //     -webkit-line-clamp: initial;
-    //   }
-    // }
   }
   &-caption{
     order: -1;
@@ -171,10 +188,11 @@
     flex: 0 1 19%;
     img{
       border-radius: 50%;
+      margin-inline: auto;
     }
     p{
       font-weight: 400;
-      margin: 8px 0 22px;
+      margin: 8px 0 15px;
     }
   }
 }
@@ -205,12 +223,11 @@
   padding-top: 100px;
   h3{
     font-family: 'Epilogue', arial;
+    font-weight: 400;
   }
   &-title{
     position: relative;
     padding-top: 140px;
-    display: flex;
-    justify-content: center;
     font-style: italic;
   }
   &-name{
@@ -222,7 +239,14 @@
     display: block;
     position: absolute;
     top: 0;
+    left: -30px;
     font-family: 'Epilogue', arial;
+  }
+}
+.mission:not(.testimonial){
+  .mission-blockquote{
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 .testimonial{
