--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -47,23 +47,29 @@ img {
  */
 html {
   scroll-behavior: smooth;
+  font-size: 22px;
+}
+@media screen and (max-width: 1280px) {
+  html {
+    font-size: 18px;
+  }
 }
 
 body {
-  color: #D4CAF3;
-  font: 500 22px/1.6 "Inter", arial;
+  color: #fff;
+  font: 500 1rem/1.6 "Inter", arial;
   background: #14014B;
 }
 
 h1 {
-  font: 900 60px/1 "Epilogue", arial;
+  font: 900 2.72rem/1 "Epilogue", arial;
   letter-spacing: 0.3px;
   color: #E108BE;
   margin-bottom: 18px;
 }
 
 h2 {
-  font: 900 60px/1.4 "Epilogue", arial;
+  font: 900 2.72rem/1.4 "Epilogue", arial;
   background: linear-gradient(270deg, #EE2DFF 0%, #BFAFFF 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -73,28 +79,27 @@ h2 {
 }
 
 h3 {
-  font: 600 32px/1.2 "Inter", arial;
+  font: 600 1.45rem/1.2 "Inter", arial;
   color: #fff;
 }
 
 h4 {
-  font: 700 32px/1.2 "Inter", arial;
+  font: 700 1.45rem/1.2 "Inter", arial;
   color: #fff;
 }
 
 h5 {
-  font: 600 18px/1.2 "Epilogue", arial;
-  color: #fff;
+  font: 600 0.81rem/1.2 "Epilogue", arial;
+  color: #160054;
 }
 
 h6 {
-  font: 600 16px/1.2 "Inter", arial;
+  font: 600 0.72rem/1.2 "Inter", arial;
   color: #fff;
   margin-bottom: 20px;
 }
 
 a {
-  font-size: 14px;
   color: #fff;
   text-transform: uppercase;
   transition: all 0.5s ease;
@@ -104,6 +109,11 @@ a {
   padding-inline: 30px;
   margin-inline: auto;
   max-width: 1400px;
+}
+@media screen and (max-width: 1500px) {
+  .container {
+    max-width: 1160px;
+  }
 }
 
 .container-fluid {
@@ -157,6 +167,9 @@ a {
   border-radius: 6px;
   border: none;
   transition: all 0.5s ease;
+  text-transform: uppercase;
+  color: #fff;
+  cursor: pointer;
 }
 .btn:hover {
   background: linear-gradient(270deg, #B900C9 0%, #B900C9 100%);
@@ -209,7 +222,7 @@ a {
   gap: 45px;
 }
 .header_nav-link {
-  font-size: 18px;
+  font-size: 0.81rem;
   font-weight: 700;
 }
 .header_nav-link:hover, .header_nav-link .active-link {
@@ -224,7 +237,7 @@ a {
   align-items: center;
   padding-inline: 40px;
   margin-right: -60px;
-  font-size: 18px;
+  font-size: 0.81rem;
   font-weight: 700;
   display: flex;
   align-items: center;
@@ -407,9 +420,32 @@ a {
 .trusted img {
   justify-self: flex-end;
 }
+.trusted_card {
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0px 50px;
+  overflow: hidden;
+}
+.trusted_card:hover {
+  transition: all 0.5s linear;
+}
+.trusted_card:hover .trusted_card-text {
+  max-height: 400px;
+  transition: all 0.5s ease-in-out;
+}
+.trusted_card:hover .trusted_card-dis {
+  overflow: visible;
+  -webkit-line-clamp: initial;
+}
+.trusted_card-text {
+  transition: all 0.5s ease-in-out;
+  max-height: 130px;
+}
 .trusted_card-dis {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   transition: all 0.5s ease;
@@ -473,10 +509,11 @@ a {
 }
 .company_card img {
   border-radius: 50%;
+  margin-inline: auto;
 }
 .company_card p {
   font-weight: 400;
-  margin: 8px 0 22px;
+  margin: 8px 0 15px;
 }
 
 .investor {
@@ -508,12 +545,11 @@ a {
 }
 .mission h3 {
   font-family: "Epilogue", arial;
+  font-weight: 400;
 }
 .mission-title {
   position: relative;
   padding-top: 140px;
-  display: flex;
-  justify-content: center;
   font-style: italic;
 }
 .mission-name {
@@ -525,7 +561,13 @@ a {
   display: block;
   position: absolute;
   top: 0;
+  left: -30px;
   font-family: "Epilogue", arial;
+}
+
+.mission:not(.testimonial) .mission-blockquote {
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .testimonial {
@@ -552,7 +594,7 @@ a {
 }
 .footer a {
   text-transform: capitalize;
-  font-size: 17px;
+  font-size: 0.7272rem;
   font-weight: 500;
 }
 .footer a:hover {
@@ -593,7 +635,7 @@ a {
   grid-template-columns: 1fr 40%;
 }
 .footer_bottom a, .footer_bottom p {
-  font-size: 17px;
+  font-size: 0.7272rem;
   font-weight: 400;
 }
 .footer_bottom-first {
@@ -640,7 +682,7 @@ a {
 .modal-content {
   max-width: 775px;
   width: 100%;
-  background: linear-gradient(360deg, #B900C9 0%, #5C2FDC 100%);
+  background: #fff;
   color: #160054;
   border-radius: 10px;
   padding-bottom: 30px;
@@ -648,9 +690,12 @@ a {
 .modal-content p:not(:last-child) {
   margin-bottom: 20px;
 }
-.modal h5 {
+.modal h4 {
   color: #160054;
-  margin-bottom: 3px;
+  line-height: 1;
+}
+.modal h5 {
+  font-size: 22px;
 }
 
 .modal-open {
@@ -658,4 +703,21 @@ a {
 }
 .modal-open .modal {
   display: grid;
+}
+
+.modal-request .modal-body {
+  position: relative;
+  padding-block: 50px;
+  padding-inline: 130px;
+}
+.modal-request .modal-content {
+  background: linear-gradient(180deg, #771181 0%, #331688 100%);
+}
+.modal-request .close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+.modal-request .request-form-group {
+  gap: 32px;
 }/*# sourceMappingURL=main.css.map */
