add animation on card hover

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,15 +23,17 @@
   &_btn{
     background: $purple-dark;
     align-self: stretch;
-    align-items: center;
     padding-inline: 40px;
     margin-right: -60px;
+    position: relative;
+    min-width: 240px;
+    justify-content: center;
     @include font_size_color(0.81rem, 700);
     @include flex(flex, wrap, null, center);
     &:hover{
       background: $header-btn-gt;
       .header_btn-arrow{
-        transform: translateX(0);
+        right: 30px;
         opacity: 1;
       }
       .header_btn-text {
@@ -42,10 +44,10 @@
       transition: all .3s ease;
     }
     &-arrow{
-      margin-left: 25px;
-      transform: translateX(-40px);
       opacity: 0;
-      transition: all .3s ease;
+      transition: all 0.3s ease;
+      position: absolute;
+      right: 50px;
     }
   }
 }
