--- a/src/scss/components/_reuseable.scss
+++ b/src/scss/components/_reuseable.scss
@@ -5,6 +5,9 @@
   @media screen and (max-width: 1500px){
     max-width: 1160px;
   }
+  @media screen and (max-width: 1025px){
+    max-width: 900px;
+  }
 }
 .container-fluid{
   padding-inline: 60px;
