--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -115,6 +115,11 @@ a {
     max-width: 1160px;
   }
 }
+@media screen and (max-width: 1025px) {
+  .container {
+    max-width: 900px;
+  }
+}
 
 .container-fluid {
   padding-inline: 60px;
@@ -234,9 +239,11 @@ a {
 .header_btn {
   background: #B900C9;
   align-self: stretch;
-  align-items: center;
   padding-inline: 40px;
   margin-right: -60px;
+  position: relative;
+  min-width: 240px;
+  justify-content: center;
   font-size: 0.81rem;
   font-weight: 700;
   display: flex;
@@ -247,7 +254,7 @@ a {
   background: linear-gradient(90deg, #5E2EDB 0%, #B900C9 100%);
 }
 .header_btn:hover .header_btn-arrow {
-  transform: translateX(0);
+  right: 30px;
   opacity: 1;
 }
 .header_btn:hover .header_btn-text {
@@ -257,10 +264,10 @@ a {
   transition: all 0.3s ease;
 }
 .header_btn-arrow {
-  margin-left: 25px;
-  transform: translateX(-40px);
   opacity: 0;
   transition: all 0.3s ease;
+  position: absolute;
+  right: 50px;
 }
 
 .ityped {
@@ -421,34 +428,20 @@ a {
   justify-self: flex-end;
 }
 .trusted_card {
-  height: 320px;
+  height: 340px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0px 50px;
   overflow: hidden;
 }
-.trusted_card:hover {
-  transition: all 0.5s linear;
-}
 .trusted_card:hover .trusted_card-text {
   max-height: 400px;
-  transition: all 0.5s ease-in-out;
-}
-.trusted_card:hover .trusted_card-dis {
-  overflow: visible;
-  -webkit-line-clamp: initial;
 }
 .trusted_card-text {
-  transition: all 0.5s ease-in-out;
+  transition: all 0.7s ease;
   max-height: 130px;
-}
-.trusted_card-dis {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
   overflow: hidden;
-  transition: all 0.5s ease;
 }
 .trusted-caption {
   order: -1;
